Личный проект: завершаем вёрстку
Добавил минифицированные файлы CSS и JS

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <header class="header container">
@@ -464,7 +464,7 @@
           <button type="button" class="close-modal" aria-label="Закрыть окно"></button>
           <p><img src="img/map-big.png" width="960" height="560" alt="Офис компании находится по адресу г. Москва, ул. Строителей, 15"></p>
         </section>
-  <script type="text/javascript" src="js/modal-write-us.js"></script>
-  <script type="text/javascript" src="js/modal-map.js"></script>
+  <script type="text/javascript" src="js/modal-write-us.min.js"></script>
+  <script type="text/javascript" src="js/modal-map.min.js"></script>
   </body>
 </html>
